prod_snapshot_2015-09-24_1030/objects/Payment_Entries__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billed_Amt__c</fullName>
        <formula>IF(Completed__c=True, Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billed Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book_Amount__c</fullName>
        <label>Book Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <label>CC</label>
        <referenceTo>Payment_Processing__c</referenceTo>
        <relationshipLabel>Payment Entries</relationshipLabel>
        <relationshipName>Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Code_Period__c</fullName>
        <formula>KPI_Calender__r.Code_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>CC__r.Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmation__c</fullName>
        <label>Confirmation #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declined_Amt__c</fullName>
        <formula>IF(Declined__c=True,Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Declined Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delayed_Amt__c</fullName>
        <formula>IF(AND(Declined__c=False,Completed__c=False,Date__c&lt;TODAY()),Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delayed Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DigAccountManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dig Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Entries_DigAcctMan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dig_Acct_Man_Id__c</fullName>
        <formula>CC__r.Opportunity__r.Dig_Account_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dig Acct Manager Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Count__c</fullName>
        <formula>IF(CONTAINS(RIGHT(Name,2),&quot;-&quot;),&quot;0&quot; &amp; RIGHT(Name,1),RIGHT(Name,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entry Count</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JumpToOpp__c</fullName>
        <formula>HYPERLINK(&quot;https://na10.salesforce.com/&quot; &amp;  CC__r.Opportunity__c, &quot;JumpToOpp&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JumpToOpp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Calender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI Calender</label>
        <referenceTo>KPICalender__c</referenceTo>
        <relationshipLabel>Payment Entries</relationshipLabel>
        <relationshipName>Payment_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opp_Bill_Status__c</fullName>
        <formula>TEXT(CC__r.Opportunity__r.Paused_Or_Canceled__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Bill Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Close_Date__c</fullName>
        <formula>CC__r.Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_Status__c</fullName>
        <formula>TEXT( CC__r.Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Type__c</fullName>
        <formula>IF(CC__r.RecordTypeId=&quot;012A0000000PUl2&quot;,&quot;Check&quot;,&quot;Credit&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <formula>KPI_Calender__r.YearPeriod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Amt__c</fullName>
        <formula>IF(AND(Declined__c=False,Completed__c=False,Date__c&gt;=TODAY()),Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Processor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Role__c</fullName>
        <formula>CC__r.Opportunity__r.Sales_Rep_II__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <formula>CC__r.Opportunity__r.Sales_Rep_II__r.FirstName &amp; &quot; &quot; &amp; CC__r.Opportunity__r.Sales_Rep_II__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Set</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Entry</label>
    <listViews>
        <fullName>AllCarrier</fullName>
        <columns>Processor__c</columns>
        <columns>Pay_Type__c</columns>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Completed__c</columns>
        <columns>Confirmation__c</columns>
        <columns>Custom_Set__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processor__c</field>
            <operation>equals</operation>
            <value>Dominique Carrier</value>
        </filters>
        <label>All Carrier</label>
    </listViews>
    <listViews>
        <fullName>AllKim</fullName>
        <columns>Processor__c</columns>
        <columns>Pay_Type__c</columns>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Completed__c</columns>
        <columns>Confirmation__c</columns>
        <columns>Custom_Set__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processor__c</field>
            <operation>equals</operation>
            <value>Kim Baloun</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>AllKim</label>
    </listViews>
    <listViews>
        <fullName>AllNeglected</fullName>
        <columns>Processor__c</columns>
        <columns>Pay_Type__c</columns>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Completed__c</columns>
        <columns>Confirmation__c</columns>
        <columns>Custom_Set__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Completed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>5/10/2011</value>
        </filters>
        <label>All Neglected</label>
    </listViews>
    <listViews>
        <fullName>AllToday</fullName>
        <columns>Processor__c</columns>
        <columns>Pay_Type__c</columns>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Completed__c</columns>
        <columns>Confirmation__c</columns>
        <columns>Custom_Set__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Today</label>
    </listViews>
    <listViews>
        <fullName>AllTomorrow</fullName>
        <columns>Processor__c</columns>
        <columns>Pay_Type__c</columns>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Completed__c</columns>
        <columns>Confirmation__c</columns>
        <columns>Custom_Set__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <label>All Tomorrow</label>
    </listViews>
    <listViews>
        <fullName>AllYesterday</fullName>
        <columns>Processor__c</columns>
        <columns>Pay_Type__c</columns>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Completed__c</columns>
        <columns>Confirmation__c</columns>
        <columns>Custom_Set__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>All Yesterday</label>
    </listViews>
    <listViews>
        <fullName>All_Declined</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Declined_Amt__c</columns>
        <columns>Date__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Sales_Rep_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Declined__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Declined</label>
    </listViews>
    <nameField>
        <label>Entry</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Can_Only_Assign_To_Self</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(  $User.Id =  Processor__r.Id ), ISCHANGED( Processor__c ) )</errorConditionFormula>
        <errorDisplayField>Processor__c</errorDisplayField>
        <errorMessage>You may only assign Processing status to yourself.  Please contact the person you wish to assign so they can update accordingly.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Fields_Processor</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Processor__c)</errorConditionFormula>
        <errorDisplayField>Processor__c</errorDisplayField>
        <errorMessage>Please Enter a Processor</errorMessage>
    </validationRules>
</CustomObject>